--- a/src/style.css
+++ b/src/style.css
@@ -10,13 +10,6 @@
     --color-shop-info-front: rgb(235,235,240);
     --color-shop-info-back: rgb(220,220,230);
 
-    --color-shop-bg5: rgb(158,126,105);
-    --color-shop-bg6: rgb(121,111,127);
-    --color-shop-bg7: rgb(203,169,120);
-    --color-shop-bg8: rgb(167,161,164);
-    --color-shop-bg9: rgb(212,170,169);
-    --color-shop-bg10: rgb(58,157,142);
-
     --color-bg-button: #8b69c4;
     --color-bg-footer: #917ac9;
 }
@@ -103,10 +96,16 @@ h2, h3 {
     text-align: center;
 }
 
-/* Home */
+h2 {
+    margin-top: 0rem;
+    margin-bottom: 2rem;
+}
 
-/* Menu */
+/* Home, Menu, Contact */
 
+/* Card Containers */
+
+.card-elsje-container,
 .card-item-container,
 .card-contact-container {
     background-color: var(--color-shop-shelf-back);
@@ -125,11 +124,22 @@ h2, h3 {
     grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
 }
 
+/* Cards */
+
+.card-elsje,
 .card-item,
 .card-contact {
     background-color: var(--color-shop-shelf-back);
     display: grid;
     padding: 1rem;
+}
+
+.card-elsje {
+    /* Image is defined below at 250x525 */
+    grid: 
+        'text img' 1fr
+        / 1fr 1fr;
+    max-width: 500px;
 }
 
 .card-item {
@@ -184,7 +194,6 @@ h2, h3 {
     }
 }
 
-
 .card-item-name,
 .card-contact-name {
     grid-area: text;
@@ -195,6 +204,9 @@ h2, h3 {
     padding: 0.5rem 0.5rem;
 }
 
+/* Info */
+
+.card-elsje-text,
 .card-item-desc,
 .card-contact-text {
     grid-area: text;
@@ -203,14 +215,25 @@ h2, h3 {
     background-color: var(--color-shop-info-back);
     border: 0.5rem solid var(--color-shop-info-front);
     border-radius: 0.5rem;
+
+    padding: 0.5rem 0.5rem;
+}
+
+.card-elsje-text {
+    margin-top: 7rem;
+    margin-bottom: auto;
+}
+
+.card-item-desc,
+.card-contact-text {
     margin: 0rem 0.5rem 2rem 1rem;
 
     position: relative;
     top: 2rem;
     left: 0.5rem;
-
-    padding: 0.5rem 0.5rem;
 }
+
+/* Labels */
 
 .card-item-cost,
 .card-contact-title {
@@ -230,6 +253,16 @@ h2, h3 {
 .card-contact-title {
     grid-area: title;
     text-align: center;
+}
+
+/* Images */
+
+.card-elsje img {
+    grid-area: img;
+
+    width: 250px;
+    height: 525px;
+    object-fit: none;
 }
 
 .card-item-img,
